feat: implement profile picture storage on back and service on front